CAMEL-19607: camel-core - Fix error handler redeliveryPolicyRef